# SteamVault

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  run.py
prisma/: schema.prisma
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: GameCard.jsx  GameList.jsx  Header.jsx  Sidebar.jsx
src/pages/: GameDetails.jsx  Home.jsx  Settings.jsx  Statistics.jsx
src/scripts/: event-bus.js  scanner-api.js  scanner-local.js  scanner.js
src/styles/: GameCard.css  GameDetails.css  GameList.css  Header.css  Home.css  Settings.css  Sidebar.css  Statistics.css
